# cift

./: .gitignore  README.md  play.py  pypi.sh  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml
scripts/: pypi.sh
src/cift/: __init__.py  astextra.py  bnf.py  builder.py  debug.py  err.py  grammar.py  parser.py  re.py  semir.py  shorthand.py  types.py
src/cift/grammars/: __init__.py  strict.py
tests/: __init__.py  test_comment.py  test_edges.py  test_poly.py  test_regex.py  test_rout.py  test_symb.py  utils.py
